--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "lottie-react-native": "^7.0.0",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-animated-loader": "^1.0.0",
@@ -29,6 +30,7 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2"
   },
