--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-gesture-handler": "^2.19.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.12.5",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.15.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.11.0",
