--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/netinfo": "^11.4.0",
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -22,9 +23,11 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-animated-loader": "^1.0.0",
+    "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.12.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.15.1",
     "react-native-responsive-screen": "^1.4.2",
@@ -32,6 +35,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2"
   },
