SpotList Optimization Done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,10 @@
         "buode",
         "contant",
         "Cutom",
+        "darkblack",
         "defaultmodel",
         "delet",
+        "Eventlogs",
         "Faiz",
         "Genral",
         "iothub",
