Refector EventLog and SpotScreen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,9 +17,11 @@
         "RFDI",
         "Rfid",
         "Rfidscreen",
+        "secoundary",
         "smartios",
         "Subviews",
         "Successfull",
-        "Swipeable"
+        "Swipeable",
+        "weightbridge"
     ]
 }
