--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-snackbar": "^2.8.0",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2"
