--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Additionals",
         "bluelight",
         "bucode",
         "buiness",
@@ -8,6 +9,7 @@
         "contant",
         "Cutom",
         "darkblack",
+        "Deactive",
         "defaultmodel",
         "delet",
         "Eventlogs",
