--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.4.0",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
@@ -24,19 +26,21 @@
     "react-native": "0.75.2",
     "react-native-animated-loader": "^1.0.0",
     "react-native-calendars": "^1.1307.0",
-    "react-native-gesture-handler": "^2.19.0",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.4.1",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.16.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^3.35.0",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snackbar": "^2.8.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.1",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.1.0",
