Latest With navigation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,16 +17,19 @@
         "Genral",
         "iothub",
         "Kbutton",
+        "netinfo",
         "reduxjs",
         "RFDI",
         "Rfid",
         "Rfidscreen",
+        "Secound",
         "secoundary",
         "smartios",
         "Subviews",
         "Successfull",
         "Swipeable",
         "Tabler",
+        "Userlogin",
         "weightbridge"
     ]
 }
