--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/cli": "^15.1.0",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.4.0",
     "@react-native-picker/picker": "^2.8.1",
