--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
         "Successfull",
         "Swipeable",
         "Tabler",
+        "Upadte",
         "Userlogin",
         "weightbridge"
     ]
