--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "canclebutton",
         "conectivity",
         "contant",
+        "contex",
         "Cutom",
         "darkblack",
         "Deactive",
