MyCode include BottomSheet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "Faiz",
         "Genericmodal",
         "Genral",
+        "gorhom",
         "iothub",
         "Kbutton",
         "Lable",
