--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-animated-loader": "^1.0.0",
+    "react-native-bootsplash": "^6.3.2",
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
