--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "delet",
         "drivertag",
         "Eventlogs",
+        "Exterator",
         "Faiz",
         "Genericmodal",
         "Genral",
@@ -25,6 +26,7 @@
         "Kbutton",
         "Lable",
         "milli",
+        "Momnetum",
         "Navigations",
         "netinfo",
         "reduxjs",
